--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -366,7 +366,7 @@ body{
   transform: scaleX(-1);
 }
 .three{
-  background: #1b3a12; /* тёмно-зелёный фон */
+  background: #1b3a12; 
 }
 
 .canvas{
@@ -376,10 +376,56 @@ body{
   margin: 0 auto;
 }
 
+.main-title {
+  position: absolute;
+
+
+  width: 812.724px;
+  height: 114px;
+
+  top: 759.81px;
+  left: 483.83px;
+
+  font-family: "CutOutOFFont", sans-serif;
+  font-size: 64px;          
+  line-height: 1;
+  color: #FF2DF7;
+  text-transform: uppercase;
+
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+  animation: jump 1.2s ease-in-out infinite;
+  transform-origin: center bottom;
+
+  z-index: 20;
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(0) scale(1);
+  }
+  20% {
+    transform: translateY(-12px) scale(1.05);
+  }
+  40% {
+    transform: translateY(0) scale(0.98);
+  }
+  60% {
+    transform: translateY(-6px) scale(1.02);
+  }
+  100% {
+    transform: translateY(0) scale(1);
+  }
+}
+
 .center-block{
   position: absolute;
   left: 50%;
-  top: 120px;          /* подгони если нужно */
+  top: 120px;          
   transform: translateX(-50%);
   width: 420px;
   z-index: 10;
